# Gem-Bid-Assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
data/cache/: collection.json
data/cache/tenders/: 9344536.txt  9449802.txt  9532011.txt  9532862.txt  9533386.txt
scripts/: collect_live_data.py
src/procurement/: __init__.py
src/procurement/modules/compliance/: __init__.py  llm_parser.py  regex_parser.py  rule_engine.py  schemas.py  vendors.py
src/procurement/modules/data_pipeline/: __init__.py  cli.py  document_text.py  gem_client.py  repository.py  sample_data.py  schemas.py
src/procurement/modules/orchestration/: __init__.py  use_cases.py
src/procurement/modules/pricing/: __init__.py  pricing_model.py
src/procurement/modules/probability/: __init__.py  win_probability.py
src/procurement/shared/: __init__.py  config.py  money.py
tests/: test_compliance_engine.py  test_pricing_model.py  test_regex_parser.py  test_win_probability.py
