[project]
name = "gem-bid-assistant"
version = "0.1.0"
description = "A hardened GemEdge-style procurement intelligence prototype for GeM tenders."
readme = "README.md"
authors = [
    { name = "angelonels", email = "189693313+angelonels@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "groq>=0.37.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3,<3",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[project.scripts]
gemedge-collect = "procurement.modules.data_pipeline.cli:main"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "procurement"
